<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AdoPet</string>
    <string name="txt_imageView_logo" translatable="false">Logo</string>
    <string name="slogan">Love them Enough ,Give them Best</string>
    <string name="shr_hint_email" translatable="false">Email</string>
    <string name="shr_hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="txt_login">Login</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_toast_verifyEmail">Please verify your email.</string>
    <string name="empty_credentials_tv">Empty Credentials! </string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_intro_next_button" tools:ignore="MissingTranslation">NEXT</string>
    <string name="app_intro_back_button" tools:ignore="MissingTranslation">BACK</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_image_content_description" tools:ignore="MissingTranslation">graphics</string>
    <string name="txt_toast_onboarding">Swiped out right</string>
    <string name="txt_title_one">A deserved home</string>
    <string name="txt_subtitle_one">Lost of animals enter shelters every year, where their lives are complex.</string>
    <string name="txt_title_two">More lives</string>
    <string name="txt_subtitle_two">You\'re make space for and giving an opportunity them.</string>
    <string name="txt_title_three">New friend</string>
    <string name="txt_subtitle_three">They have so much love to give and ever stop giving it to you.</string>
    <string name="txt_error_validate_email">You need to enter a email.</string>
    <string name="txt_error_validate_password">You need to enter a password.</string>
    <string name="txt_error_validate_fullname">You need to enter your full name</string>
    <string name="txt_toast_empty_registration">Registration information is empty.</string>
    <string name="shr_hint_fullName">Full name</string>
    <string name="btn_signup">Sign Up</string>
    <string name="txt_wait">Please Wait!</string>
    <string name="txt_toast_signUp_successful">Sign Up Successful.</string>
    <string name="txt_toast_shortPass">Password too short!</string>
    <string name="txt_reset_password_dialogs">Reset Password ?</string>
    <string name="txt_reset_enter_email_dialogs">Enter Your  email to received Reset Link</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_toast_resetPassword">Reset Link sent to your email.</string>
    <string name="txt_toast_error_resetpassword">Error ! Reset link is not sent to</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_itemmenu_Pets">Pets</string>
    <string name="txt_itemmenu_Favorites">Favorites</string>
    <string name="txt_itemmenu_Messages">Messages</string>
    <string name="txt_itemmenu_MyPets">My Pets</string>
    <string name="txt_itemmenu_AboutApp">About App</string>
    <string name="txt_itemmenu_SignOut">Sign Out</string>
    <string name="txt_item_dark_mode">Dark mode</string>
    <string name="txt_headerTitle_userName" translatable="false">Khonganrau</string>
    <string name="txt_headerText_email" translatable="false">users@gmail.com</string>
    <string name="txt_itemmenu_changePassword">Change Password</string>
    <string name="txt_itemmenu_myProfile">My Profile</string>
    <string name="txt_content_description_pets">Explore pets</string>
    <string name="txt_content_description_favorites">Favorite pets</string>
    <string name="txt_content_description_messages" traslatatable="false">Communication</string>
    <string name="txt_content_description_myPets">Your pets</string>
    <string name="txt_content_description_abouApp">Applications Information</string>
    <string name="navigation_drawer_open">Open naviagtion drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="txt_user_avatar_content_description">User avatar</string>
    <string name="txt_pet_name">Pet Name</string>
    <string name="txt_pet_breed">Pets Breed</string>
    <string name="appwidget_text" translatable="false">AdoPet</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string-array name="theme">
        <item>System Default</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="toast_finger_no_exist">Fingerprint sensor not exist</string>
    <string name="toast_biometic_unavailable">Biometric features are currently unavailable.</string>
    <string name="notification_sample" translatable="false">This is notification</string>
    <string name="content_image_icon" translatable="false">Icon for notification</string>
    <string name="txt_add_floating_btn">Create new pet</string>
    <string name="txt_pet_demo" translatable="false">Pet demo</string>
    <string name="txt_pet_name_age" translatable="false">Pet Name, Pet Ager</string>
    <string name="txt_about_pet">About Pet</string>
    <string name="pet_image_lable">Pet\'s Images*</string>
    <string name="hnt_pet_name">Name of pet*</string>
    <string name="hnt_pet_dob">Date of birth</string>
    <string name="txt_gender_male">Male</string>
    <string name="txt_gender_female">Female</string>
    <string name="txt_gender">Gender*</string>
    <string name="txt_sterilization">Sterilization*</string>
    <string name="txt_ster_yes">Yes</string>
    <string name="txt_ster_no">No</string>
    <string name="txt_description">Describe your pet\'s personality*</string>
    <string name="txt_zipCode">ZIP/ Postal Code</string>
    <string name="txt_address">Address*</string>
    <string name="txt_large_size">Large Size*</string>
    <string name="txt_age">Ager*</string>
    <string name="txt_energy">Energy Level</string>
    <string name="txt_activityLevel">Activity Level</string>
    <string name="txt_playfull">Playfulness Level</string>
    <string name="txt_affection">Affection Level</string>
    <string name="txt_training"> Ease of Training</string>
    <string name="btn_add_new_pet">Add new pet</string>
    <string name="txt_status">Status</string>
    <string name="btn_contact">Contact</string>
    <string name="txt_share_floating_btn">Share</string>
    <string name="txt_back_btn">Back</string>
    <string name="txt_title_search">Search</string>
    <string name="txt_search_basic">Basic</string>
    <string name="txt_search_advanced">Advanced</string>
    <string name="txt_option_any">Any</string>
    <string name="txt_ager_baby">Baby</string>
    <string name="txt_ager_young">Young</string>
    <string name="txt_ager_adult">Adult</string>
    <string name="txt_ager_senior">Senior</string>
    <string name="txt_size_any">Any</string>
    <string name="txt_size_s" translatable="false">S</string>
    <string name="txt_size_m" translatable="false">M</string>
    <string name="txt_size_l" translatable="false">L</string>
    <string name="txt_size_xl" translatable="false">XL</string>
    <string name="btn_search">Search Pet</string>
    <string name="txt_title_result">Results</string>
    <string name="txt_title_create">Create New Pet</string>
    <string name="txt_low">Low</string>
    <string name="txt_moderate">Moderate</string>
    <string name="txt_high">High</string>
    <string name="txt_error_blank_fields">You need fill out this field.</string>
    <string name="helper_txt_breed">Before choosing pets breeds, determine the type of pet in the above field.</string>
    <string name="txt_error_breed">Please select one.</string>
    <string name="txt_error_non_type">Select one type for pet.</string>
    <string name="cat">Cat</string>
    <string name="txt_user_name">User Name</string>
    <string name="txt_date_of_birth">Day of Birth</string>
    <string name="txt_email">Email</string>
    <string name="txt_other">Other</string>
    <string name="txt_province_city">Province / City*</string>
    <string name="txt_district">District*</string>
    <string name="txt_wards">Wards*</string>
    <string name="txt_houseNumber">House Number*</string>
    <string name="btn_saveInfo">Save Information</string>
    <string name="txt_editInfo">Edit Information</string>
    <string name="txt_content_description_myProfile">My Profile</string>
    <string name="txt_content_description_changePassword">Change Password</string>
    <string name="txt_toast_myProfile">My Profile</string>
    <string name="txt_numberPhone">Numberphone</string>
    <string name="txt_province">Province/City*</string>
    <string name="txt_error_currentPassword">You need fill out the current passwords fields.</string>
    <string name="txt_error_newPassword">You need to enter new passwords.</string>
    <string name="txt_error_newPassword_short">Your password need more than 7 characters.</string>
    <string name="txt_error_confirmPassword">You need enter the confirm password.</string>
    <string name="txt_error_confirmPassword_notmatch">Your password and confirm password do not match</string>
    <string name="txt_emptyChangePassword">Empty form!!!</string>
    <string name="txt_reAuth_success" translatable="false">Re-authenticated</string>
    <string name="txt_reAuth_failed" translatable="false">Re- Authentication failed</string>
    <string name="txt_toast_password_change_success">Updated new passwords successful.</string>
    <string name="txt_oldPass">Current Passwords</string>
    <string name="txt_newPass">New Passwords</string>
    <string name="txt_confirmPass">Confirm Passwords</string>
    <string name="btn_update">Update</string>
    <string name="txt_blank_required_field">You need to fill out the required fields!!!</string>
    <string name="shr_hint_currentPassword">Current password</string>
    <string name="txt_error_login">You need to login.</string>
    <string name="txt_currentPasswords_notMatch">Your current password is not correct.</string>
    <string name="txt_success_changePassword">Your password changed successfully!</string>
    <string name="txt_valid_name_unique_char">Only letters are allowed!</string>
    <string name="txt_error_blank_form">Please complete the required fields.</string>
    <string name="rbtn_nonselect">Select one item!</string>
    <string name="txt_error_null_uri">Select one pet\'s image.</string>
    <string name="txt_error_des_short">Pet\'s description must have more than 100 characters!.</string>
    <string name="txt_error_des_long">Pet\'s description must less than 3000 characters!</string>
    <string name="txt_address_lable">Address</string>
    <string name="txt_location" translatable="false">Location</string>
    <string name="txt_location_ques" translatable="false">Your current location or add other location?</string>
    <string name="positive_button">Current Location</string>
    <string name="negative_button">Add other location.</string>
    <string name="txt_petProperties">Pets Properties</string>
    <string name="txt_error_rate">Rate this fields!</string>
    <string name="txt_success_create_pet">Your pet created successful.</string>
    <string name="txt_failed_create" translatable="false">Created progress failed!!!</string>
    <string name="txt_title_edit_userProfile">Edit User Profile</string>
    <string name="txt_itemmenu_Call">Call</string>
    <string name="txt_duration">Duration</string>
    <string name="txt_editPet">Edit</string>
    <string name="txt_remove">Remove</string>
    <string name="mail_content" translatable="false">Mail Context</string>
    <string name="shr_hint_subject">Subject</string>
    <string name="shr_hint_emailBody">Email content</string>
    <string name="send">Send</string>
</resources>