<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.View.SignUpActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_circle_red"
        android:contentDescription="@string/txt_imageView_logo"
        android:elevation="10dp"
        android:src="@mipmap/ic_icon_app_foreground" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:elevation="10dp"
        android:text="@string/txt_sign_up"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_fullname"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_signup"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        android:hint="@string/shr_hint_fullName"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/pink"
        app:boxStrokeWidth="1dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_account_circle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullName_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_fullname"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        android:hint="@string/shr_hint_email"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/pink"
        app:boxStrokeWidth="1dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email"
        android:elevation="10dp"
        android:hint="@string/shr_hint_password"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/pink"
        app:boxStrokeWidth="1dp"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:shadowColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/pink"
        android:elevation="10dp"
        android:text="@string/btn_signup" />

</RelativeLayout>