<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_item"
    android:id="@+id/customDialogForm">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/pink"
        android:text="@string/mail_content"
        android:fontFamily="@font/nunito_bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:gravity="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        android:hint="@string/shr_hint_email"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/pink"
        app:boxStrokeWidth="1dp"
        app:endIconMode="clear_text"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:enabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/receiverEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:fontFamily="@font/nunito_regular"
            android:textSize="15sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subjectLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        android:hint="@string/shr_hint_subject"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/pink"
        app:boxStrokeWidth="1dp"
        app:endIconMode="clear_text"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:enabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:fontFamily="@font/nunito_regular"
            android:textSize="15sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contentLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        android:hint="@string/shr_hint_emailBody"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/pink"
        app:boxStrokeWidth="0dp"
        app:endIconMode="clear_text"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:fontFamily="@font/nunito_regular"
            android:textSize="15sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/btnCancle"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send"
            android:id="@+id/btnSend"/>

    </LinearLayout>

</LinearLayout>
